<resources>
  <string name="app_name">ANR Game Logger</string>
  <string name="action_settings">Settings</string>
  <string name="name_filler">Name Temp</string>
  <string name="title_activity_view_game_detail">Game Detail</string>
  <string name="title_gamestats">Game Stats</string>
  <string name="title_gamenotes">Game Notes</string>
  <string name="title_activity_game_detail_view">Game Detail</string>



  <string name="title_activity_create_logged_game">CreateLoggedGameActivity</string>
  <string name="corp">corp</string>
  <string name="runner">runner</string>
  <string name="title_overview">Overview</string>
  <string name="title_add_new_game">Add New Game</string>
  <string name="nrdb_base_api_url">https://netrunnerdb.com/api/2.0/public/</string>

  <string name="score">Score</string>
  <string name="kill">Kill</string>
  <string name="mill">Mill</string>

  <!--<string-array name="winTypes">-->
    <!--<item>@string/score</item>-->
    <!--<item>@string/kill</item>-->
    <!--<iitem>@string/mill</iitem>-->
  <!--</string-array>-->

</resources>
