<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/parentLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

    <TextView
      android:id="@+id/playedDateLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:text="Played Date"
      app:layout_constraintStart_toStartOf="@+id/guideline4"
      app:layout_constraintTop_toTopOf="@+id/guideline6"/>
    <TextView
      android:id="@+id/addGameDateSelector"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:ems="10"
      android:inputType="date"
      app:layout_constraintBaseline_toBaselineOf="@+id/playedDateLabel"
      app:layout_constraintStart_toEndOf="@+id/playedDateLabel"
      tools:shadowColor="@color/md_red_600"/>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/textInputLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      app:layout_constraintStart_toStartOf="@+id/guideline4"
      app:layout_constraintTop_toBottomOf="@+id/addGameDateSelector">

        <AutoCompleteTextView
          android:id="@+id/txt_location"
          android:layout_width="326dp"
          android:layout_height="wrap_content"
          android:hint="Location"
          />
    </android.support.design.widget.TextInputLayout>


    <TextView
      android:id="@+id/winningSideTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="Winning Side"
      app:layout_constraintStart_toStartOf="@+id/rg_winingSide"
      app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
      />
    <RadioGroup
      android:id="@+id/rg_winingSide"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/winningSideTitle"
      >
        <RadioButton
          android:id="@+id/rbtn_winnerCorp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/corp"
          />
        <RadioButton
          android:id="@+id/rbtn_winnerRunner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="17dp"
          android:layout_marginRight="17dp"
          android:text="@string/runner"
          />
    </RadioGroup>
    <TextView
      android:id="@+id/winTypeTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:gravity="center_horizontal"
      android:text="Win Type:"
      app:layout_constraintStart_toStartOf="@+id/rg_winingSide"
      app:layout_constraintTop_toBottomOf="@+id/rg_winingSide"
      />
    <RadioGroup
      android:id="@+id/rg_winType"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="23dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toStartOf="@+id/guideline5"
      app:layout_constraintTop_toBottomOf="@+id/winTypeTitle"
      >
        <RadioButton
          android:id="@+id/rbtn_millWin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="116dp"
          android:layout_marginLeft="116dp"
          android:text="@string/mill"
          />
        <RadioButton
          android:id="@+id/rbtn_scoreWin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/score"
          />
        <RadioButton
          android:id="@+id/rbtn_killWin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/kill"
          />
    </RadioGroup>
    <android.support.constraint.Guideline
      android:id="@+id/guideline4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.09"/>
    <android.support.constraint.Guideline
      android:id="@+id/guideline5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.91"/>
    <android.support.constraint.Guideline
      android:id="@+id/guideline6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.04"/>


</android.support.constraint.ConstraintLayout>